--- a/doc/tex/basics/segmentation.tex
+++ b/doc/tex/basics/segmentation.tex
@@ -35,9 +35,9 @@ Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeits
   t = \frac{1}{N} \sum_{x,y} I(x,y), \quad N = \sum_{x,y} 1
 \end{equation}
 
-\subsubsection*{Iteratives Verfahren}
-\ldots
-\todo[author=\dcauthornameewie]{Iteratives Verfahren}
+%\subsubsection*{Iteratives Verfahren}
+%\ldots
+%\todo[author=\dcauthornameewie]{Iteratives Verfahren}
 
 \subsubsection*{Otsu's Methode}
 \surname{Otsu}'s Methode \cite{otsu1979} ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
@@ -79,12 +79,12 @@ Ein besseres Verfahren stellt die Berechnung eines individuellen Schwellwertes f
   \begin{subfigure}{0.49\linewidth}
     \centering
     \includegraphics[width=\linewidth]{img/basics/segmentation/local}
-    \caption{dynamisc, Einteilung in 100$\times$100 Pixel große Regionen}
+    \caption{dynamisch, Einteilung in 100$\times$100 Pixel große Regionen}
   \end{subfigure}
   \begin{subfigure}{0.49\linewidth}
     \centering
     \includegraphics[width=\linewidth]{img/basics/segmentation/dynamic}
-    \caption{dynamisc, Betrachtung einer 3$\times$3 Nachbarschaft}
+    \caption{dynamisch, Betrachtung einer 3$\times$3 Nachbarschaft}
   \end{subfigure}
   \caption[Vergleich von Thresholding Varianten]{Vergleich von Thresholding Varianten für Text bei ungleichmäßiger Belichtung. Als Schwellwert dient jeweils der oben beschriebene Mittelwert.}
 \end{figure}
