rework region-extraction including references to basics

--- a/doc/tex/basics/connected-components.tex
+++ b/doc/tex/basics/connected-components.tex
@@ -1,4 +1,5 @@
 \section{Connected Components Labeling}
+\label{sec:connected-components}
 \writtenby{\dcauthornameewie}%
 Um zusammenhängende Bildstrukturen zu erfassen verwendet man dass sogenannte Connected Components Labeling.
 Dabei wird jeder Bildpunkt genau einer Menge zugeordnet welche je eine Komponente zusammenhängenger Bildpunkte repräsentiert.
