--- a/doc/tex/basics/edge-detection.tex
+++ b/doc/tex/basics/edge-detection.tex
@@ -1,4 +1,5 @@
 \section{Kantenerkennung}
+\label{sec:edge-detection}
 \writtenby{\dcauthornameewie}%
 Kanten in einem Bild zeigen sich durch abrupte Helligkeitsänderungen zwischen benachbarten Pixeln.
 Um die Helligkeitsänderung für jedes Pixel zu bestimmen muss der Gradient der Helligkeitsfunktion $\nabla I$ eines Bildes berechnet werden.
