move region-extraction under chapter techniques

--- a/doc/tex/content.tex
+++ b/doc/tex/content.tex
@@ -1,6 +1,6 @@
 \input{tex/introduction}
 \input{tex/basics}
 \input{tex/barcodes}
-\input{tex/region-extraction}
+\input{tex/techniques}
 \input{tex/classes}
 \input{tex/evaluation}
