--- a/doc/tex/techniques/region-extraction.tex
+++ b/doc/tex/techniques/region-extraction.tex
@@ -13,7 +13,7 @@ Der \textsc{Roberts}-Operator erweist sich am geeignetsten da er Bildrauschen we
 Die Kanten werden mit einem $5\times5$ Strukturelement mittels Dilation verstärkt.
 Dadurch wird erreicht, dass nah beieinander liegende Kanten (wie es bei Strichcodes der Fall ist) eine möglichst geschloßene Fläche bilden.
 Hierbei ist die Wahl der Größe des Strukturelements entscheidend.
-Ist es zu klein, bleiben zu größe Löcher übrig.
+Ist es zu klein, bleiben zu große Löcher übrig.
 Ist es zu groß kann es vorkommen, dass Barcodes mit geringem Abstand zueinander zu einer Fläsche verschmelzen (trotz vorhandener Ruhezone).
 
 \item \textbf{Segmentierung}
