--- a/doc/document.tex
+++ b/doc/document.tex
@@ -49,6 +49,12 @@
 \usepackage{tabularx}
 \usepackage{thumbpdf}
 
+\usepackage{algpseudocode}
+\usepackage{algorithmicx}
+
+\renewcommand{\algorithmicrequire}{\textbf{Eingabe:}}
+\renewcommand{\algorithmicensure}{\textbf{Ausgabe:}}
+
 \usepackage{todonotes}
 
 \usepackage{user}
