--- a/doc/tex/techniques/candidate-extraction.tex
+++ b/doc/tex/techniques/candidate-extraction.tex
@@ -1,4 +1,4 @@
-\section{Auffinden und Extrahieren der Barcodekandidaten}
+\section{Auffinden potentieller Barcodes}
 \writtenby{\dcauthornameewie}%
 Um maschinell lesbar zu sein, zeichnen sich Barcodes durch einen, im Vergleich zur ihrer Umgebung, hohen Helligkeitskontrast aus.
 Das im Folgenden beschriebene Verfahren macht sich diesen Umstand zu nutze um Bildregionen zu identifizieren, die mit höherer Wahrscheinlichkeit Barcodes enthalten.
