add UML class diagrams (preliminary under appendix)
Include a Makefile to build the MetaPost figures and the LaTeX document in one go (outside of Eclipse).

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -48,6 +48,7 @@
 \usepackage{scrpage2}
 \usepackage{tabularx}
 \usepackage{thumbpdf}
+\usepackage{forloop}
 
 \usepackage{algpseudocode}
 \usepackage{algorithmicx}
