add some more UML class diagrams improve existing diagrams change Makefile to delete all MetaPost figures before generating the new ones

--- a/doc/img/uml/uml.9
+++ b/doc/img/uml/uml.9
@@ -1,121 +1,185 @@
 %!PS
-%%BoundingBox: -1 -24 340 1 
-%%HiResBoundingBox: -0.25 -23.48276 339.71042 0.25 
+%%BoundingBox: -98 -127 182 1 
+%%HiResBoundingBox: -97.47697 -126.77289 181.93098 0.25 
 %%Creator: MetaPost 1.208
-%%CreationDate: 2013.04.26:0029
+%%CreationDate: 2013.04.27:0130
 %%Pages: 1
-%*Font: ptmr8r 6.97382 9.96265 3c:a00000000564228
-%*Font: ptmr8r 9.96265 9.96265 42:810240017d1498
+%*Font: ptmr8r 9.96265 9.96265 20:80e2c02a204290147f473e54
+%*Font: ptmr8r 6.97382 9.96265 3c:a00000000540028
 %%BeginProlog
 %%EndProlog
 %%Page: 1 1
  0.7 0.7 0.7 setrgbcolor
 newpath 1 -1 moveto
-51.1267 -1 lineto
-51.1267 -23.48276 lineto
-1 -23.48276 lineto
+84.70401 -1 lineto
+84.70401 -17.75458 lineto
+1 -17.75458 lineto
  closepath fill
  0.9 0.9 0.9 setrgbcolor
 newpath 0 0 moveto
-50.1267 0 lineto
-50.1267 -22.48276 lineto
-0 -22.48276 lineto
+83.70401 0 lineto
+83.70401 -16.75458 lineto
+0 -16.75458 lineto
  closepath fill
  0 0 0 setrgbcolor 0 0.5 dtransform truncate idtransform setlinewidth pop
  [] 0 setdash 1 setlinejoin 10 setmiterlimit
 newpath 0 0 moveto
-50.1267 0 lineto
-50.1267 -22.48276 lineto
-0 -22.48276 lineto
+83.70401 0 lineto
+83.70401 -16.75458 lineto
+0 -16.75458 lineto
  closepath stroke
  1 setlinecap
-newpath 0 -22.48276 moveto
-50.1267 -22.48276 lineto stroke
-newpath 0 -22.48276 moveto
-50.1267 -22.48276 lineto stroke
-8.5 -7.72818 moveto
-(<<interface>>) ptmr8r 6.97382 fshow
-11.23033 -17.48276 moveto
-(Source) ptmr8r 9.96265 fshow
+newpath 0 -16.75458 moveto
+83.70401 -16.75458 lineto stroke
+newpath 0 -16.75458 moveto
+83.70401 -16.75458 lineto stroke
+6.5 -11.75458 moveto
+(Source\040{abstract}) ptmr8r 9.96265 fshow
  0.7 0.7 0.7 setrgbcolor
-newpath 81.1267 -3.86409 moveto
-182.09605 -3.86409 lineto
-182.09605 -20.61867 lineto
-81.1267 -20.61867 lineto
+newpath -96.22697 -37.75458 moveto
+181.93098 -37.75458 lineto
+181.93098 -90.01831 lineto
+-96.22697 -90.01831 lineto
  closepath fill
  0.9 0.9 0.9 setrgbcolor
-newpath 80.1267 -2.86409 moveto
-181.09605 -2.86409 lineto
-181.09605 -19.61867 lineto
-80.1267 -19.61867 lineto
+newpath -97.22697 -36.75458 moveto
+180.93098 -36.75458 lineto
+180.93098 -89.01831 lineto
+-97.22697 -89.01831 lineto
  closepath fill
  0 0 0 setrgbcolor
-newpath 80.1267 -2.86409 moveto
-181.09605 -2.86409 lineto
-181.09605 -19.61867 lineto
-80.1267 -19.61867 lineto
+newpath -97.22697 -36.75458 moveto
+180.93098 -36.75458 lineto
+180.93098 -89.01831 lineto
+-97.22697 -89.01831 lineto
  closepath stroke
-newpath 80.1267 -19.61867 moveto
-181.09605 -19.61867 lineto stroke
-newpath 80.1267 -19.61867 moveto
-181.09605 -19.61867 lineto stroke
-86.6267 -14.61867 moveto
+newpath -97.22697 -49.50916 moveto
+180.93098 -49.50916 lineto stroke
+newpath -97.22697 -64.01373 moveto
+180.93098 -64.01373 lineto stroke
+-2.13268 -46.50916 moveto
 (BufferedImageSource) ptmr8r 9.96265 fshow
+-84.22697 -60.01373 moveto
+(images:\040BufferedSourcemage[*]) ptmr8r 9.96265 fshow
+-84.22697 -74.51831 moveto
+(BufferedImageSource\(images:\040BufferedImage[*]\)) ptmr8r 9.96265 fshow
+-84.22697 -85.01831 moveto
+(createImageProvider\(frameNumber:\040int\):\040BufferedImageProvider) ptmr8r
+ 9.96265 fshow
+ 0.4 0.4 0.4 setrgbcolor
+newpath -95.22697 -57.31378 moveto
+-89.27693 -57.31378 lineto
+-89.27693 -60.01373 lineto
+-95.22697 -60.01373 lineto
+ closepath fill
  0.7 0.7 0.7 setrgbcolor
-newpath 232.09605 -3.86409 moveto
-339.71042 -3.86409 lineto
-339.71042 -20.61867 lineto
-232.09605 -20.61867 lineto
+newpath -89.27693 -60.01373 moveto
+-88.22697 -58.96378 lineto
+-88.22697 -56.26382 lineto
+-89.27693 -57.31378 lineto
+ closepath fill
+ 0.6 0.6 0.6 setrgbcolor
+newpath -89.27693 -57.31378 moveto
+-88.22697 -56.26382 lineto
+-94.17702 -56.26382 lineto
+-95.22697 -57.31378 lineto
+ closepath fill
+ 0.3 0.3 0.3 setrgbcolor 0 0.79701
+ dtransform truncate idtransform setlinewidth pop 0 setlinecap
+newpath -93.652 -56.7888 moveto
+-93.71341 -55.0663 -93.20415 -53.26373 -91.72697 -53.26373 curveto
+-90.2498 -53.26373 -89.74054 -55.0663 -89.80196 -56.7888 curveto stroke
+ 0.4 0.4 0.4 setrgbcolor
+newpath -95.22697 -71.81836 moveto
+-89.27693 -71.81836 lineto
+-89.27693 -74.51831 lineto
+-95.22697 -74.51831 lineto
+ closepath fill
+ 0.7 0.7 0.7 setrgbcolor
+newpath -89.27693 -74.51831 moveto
+-88.22697 -73.46835 lineto
+-88.22697 -70.7684 lineto
+-89.27693 -71.81836 lineto
+ closepath fill
+ 0.6 0.6 0.6 setrgbcolor
+newpath -89.27693 -71.81836 moveto
+-88.22697 -70.7684 lineto
+-94.17702 -70.7684 lineto
+-95.22697 -71.81836 lineto
+ closepath fill
+ 0.4 0.4 0.4 setrgbcolor
+newpath -95.22697 -82.31836 moveto
+-89.27693 -82.31836 lineto
+-89.27693 -85.01831 lineto
+-95.22697 -85.01831 lineto
+ closepath fill
+ 0.7 0.7 0.7 setrgbcolor
+newpath -89.27693 -85.01831 moveto
+-88.22697 -83.96835 lineto
+-88.22697 -81.2684 lineto
+-89.27693 -82.31836 lineto
+ closepath fill
+ 0.6 0.6 0.6 setrgbcolor
+newpath -89.27693 -82.31836 moveto
+-88.22697 -81.2684 lineto
+-94.17702 -81.2684 lineto
+-95.22697 -82.31836 lineto
+ closepath fill
+ 0.7 0.7 0.7 setrgbcolor
+newpath -10.95518 -110.01831 moveto
+96.6592 -110.01831 lineto
+96.6592 -126.77289 lineto
+-10.95518 -126.77289 lineto
  closepath fill
  0.9 0.9 0.9 setrgbcolor
-newpath 231.09605 -2.86409 moveto
-338.71042 -2.86409 lineto
-338.71042 -19.61867 lineto
-231.09605 -19.61867 lineto
+newpath -11.95518 -109.01831 moveto
+95.6592 -109.01831 lineto
+95.6592 -125.77289 lineto
+-11.95518 -125.77289 lineto
  closepath fill
- 0 0 0 setrgbcolor
-newpath 231.09605 -2.86409 moveto
-338.71042 -2.86409 lineto
-338.71042 -19.61867 lineto
-231.09605 -19.61867 lineto
+ 0 0 0 setrgbcolor 0 0.5 dtransform truncate idtransform setlinewidth pop
+newpath -11.95518 -109.01831 moveto
+95.6592 -109.01831 lineto
+95.6592 -125.77289 lineto
+-11.95518 -125.77289 lineto
  closepath stroke
-newpath 231.09605 -19.61867 moveto
-338.71042 -19.61867 lineto stroke
-newpath 231.09605 -19.61867 moveto
-338.71042 -19.61867 lineto stroke
-237.59605 -14.61867 moveto
+newpath -11.95518 -125.77289 moveto
+95.6592 -125.77289 lineto stroke
+newpath -11.95518 -125.77289 moveto
+95.6592 -125.77289 lineto stroke
+-5.45518 -120.77289 moveto
 (BufferedImageProvider) ptmr8r 9.96265 fshow
- [3 3 ] 0 setdash
-newpath 80.12595 -11.24138 moveto
-62.62624 -11.24138 lineto stroke
+ 0.5 0 dtransform exch truncate exch idtransform pop setlinewidth
+newpath 41.852 -36.75473 moveto
+41.852 -29.25468 lineto stroke
  1 1 1 setrgbcolor
-newpath 62.62624 -11.24138 moveto
-62.62624 -16.24138 lineto
-50.12617 -11.24138 lineto
-62.62624 -6.24138 lineto
+newpath 41.852 -29.25468 moveto
+36.852 -29.25468 lineto
+41.852 -16.75464 lineto
+46.852 -29.25468 lineto
  closepath fill
- 0 0 0 setrgbcolor 0.5
- 0 dtransform exch truncate exch idtransform pop setlinewidth [] 0 setdash
-newpath 62.62624 -11.24138 moveto
-62.62624 -16.24138 lineto stroke
-newpath 62.62624 -11.24138 moveto
-62.62624 -6.24138 lineto stroke
- 0 0.5 dtransform truncate idtransform setlinewidth pop
-newpath 50.12617 -11.24138 moveto
-62.62624 -16.24138 lineto stroke
-newpath 50.12617 -11.24138 moveto
-62.62624 -6.24138 lineto stroke
+ 0 0 0 setrgbcolor 0 0.5 dtransform truncate idtransform setlinewidth pop
+newpath 41.852 -29.25468 moveto
+36.852 -29.25468 lineto stroke
+newpath 41.852 -29.25468 moveto
+46.852 -29.25468 lineto stroke
+newpath 41.852 -16.75464 moveto
+36.852 -29.25468 lineto stroke
+newpath 41.852 -16.75464 moveto
+46.852 -29.25468 lineto stroke
+ 0.5 0 dtransform exch truncate exch idtransform pop setlinewidth
  [3 3 ] 0 setdash
-newpath 181.09714 -11.24138 moveto
-218.5965 -11.24138 lineto stroke
+newpath 41.852 -89.01816 moveto
+41.852 -96.5182 lineto stroke
  [] 0 setdash
-newpath 218.5965 -11.24138 moveto
-231.09628 -11.24138 lineto stroke
-newpath 231.09628 -11.24138 moveto
-218.5965 -6.24138 lineto stroke
-newpath 231.09628 -11.24138 moveto
-218.5965 -16.24138 lineto stroke
-189.90662 -9.24138 moveto
+newpath 41.852 -96.5182 moveto
+41.852 -109.01825 lineto stroke
+ 0 0.5 dtransform truncate idtransform setlinewidth pop
+newpath 41.852 -109.01825 moveto
+46.852 -96.5182 lineto stroke
+newpath 41.852 -109.01825 moveto
+36.852 -96.5182 lineto stroke
+43.852 -100.98839 moveto
 (<<create>>) ptmr8r 6.97382 fshow
 showpage
 %%EOF
