fix arrangement of UML diagram elements due to the removing of private attributes and methods

--- a/doc/img/uml/uml.9
+++ b/doc/img/uml/uml.9
@@ -2,7 +2,7 @@
 %%BoundingBox: -98 -117 182 1 
 %%HiResBoundingBox: -97.47697 -116.76831 181.93098 0.25 
 %%Creator: MetaPost 1.208
-%%CreationDate: 2013.04.28:1748
+%%CreationDate: [STRIPPED]
 %%Pages: 1
 %*Font: ptmr8r 9.96265 9.96265 20:80e2c02a204290147f473e54
 %*Font: ptmr8r 6.97382 9.96265 3c:a00000000540028
@@ -154,7 +154,7 @@ newpath 41.852 -99.0133 moveto
 46.852 -86.51338 lineto stroke
 newpath 41.852 -99.0133 moveto
 36.852 -86.51338 lineto stroke
-43.852 -90.98381 moveto
+43.852 -84.95387 moveto
 (<<create>>) ptmr8r 6.97382 fshow
 showpage
 %%EOF
