fix natbib error complaining about compatibility with author-year citations

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -42,7 +42,7 @@
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage{mdwlist}
-\usepackage{natbib}
+\usepackage[numbers]{natbib}
 \usepackage{scrdate}
 \usepackage{scrtime}
 \usepackage{scrpage2}
