restore pagestyle that has been commented out due to errors

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -100,8 +100,8 @@
 % withing an mbox (prevent word breaking).
 \newcommand{\surname}[1]{\mbox{\textsc{#1}}}
 
-%\pagestyle{scrheadings}
-%\setkomafont{pagehead}{\small\scshape}
+\pagestyle{scrheadings}
+\setkomafont{pagehead}{\small\scshape}
 
 \setcounter{tocdepth}{3}
 
