use scriptsize for source code listings

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -72,7 +72,7 @@
 
 \lstset{
   numberstyle=\scriptsize\ttfamily\color{gray},
-  basicstyle=\footnotesize\ttfamily,
+  basicstyle=\scriptsize\ttfamily,
   columns=fullflexible,
   showstringspaces=false,
   numbers=left,
