use small for captions and footnotesize for subcaptions use "Abb." as figure name

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -49,6 +49,8 @@
 \usepackage{tabularx}
 \usepackage{thumbpdf}
 \usepackage{forloop}
+\usepackage[font={small}]{caption}
+\usepackage[font={footnotesize}]{subcaption}
 
 \usepackage{algpseudocode}
 \usepackage{algorithmicx}
@@ -126,6 +128,9 @@
 }
 
 \begin{document}
+
+\renewcommand{\figurename}{Abb.}
+
 \input{tex/meta}
 \input{tex/title}
 
