add keywords to metadata fix author in metadata remove creator and producer from metadata

--- a/doc/tex/meta.tex
+++ b/doc/tex/meta.tex
@@ -20,15 +20,12 @@
 \newcommand{\dcpruefer}{Prof. Dr. Maximilian Eibl}
 \newcommand{\dcadvisor}{Robert Manthey}
 
-\newcommand{\dckeywords}{}
+\newcommand{\dckeywords}{Strichcode Barcode Verfahren Bild Video}
 
 \hypersetup{%
     pdftitle    = {\dctitle},
     pdfsubject  = {\dcsubject, \dcdate},
-    pdfauthor   = {\dcauthornameriren \dcauthoremailriren \dcauthornameewie
-    \dcauthoremailewie},
-    %
-    pdfkeywords = {\dckeywords},
-    pdfcreator  = {pdfTeX with Hyperref and Thumbpdf},
-    pdfproducer = {LaTeX, hyperref, thumbpdf},
+    pdfauthor   = {\dcauthornameriren~(\dcauthoremailriren)~\dcauthornameewie~(\dcauthoremailewie)},
+    pdfkeywords = {\dckeywords}
 }
+
