--- a/doc/tex/basics/grayscale.tex
+++ b/doc/tex/basics/grayscale.tex
@@ -6,14 +6,14 @@ Sind für die Analyse jedoch Strukturen entscheidend, welche sich durch Helligke
 Zunächst ist es entscheiden, in welchem Format die Bilder vorliegen, d.h. wie die Farbinformation kodiert ist.
 
 Die zwei gängigsten Formate sind RGB und YCbCr.
-RGB kodiert Farbwerte mit 3 Komponenten die den Farbkanälen Rot (R), Grün (G), und Blau (B) entsprechen.
-Im Gegensatz dazu stellt YCbCr die Farbinformation mit den 3 Komponenten Helligkeit (Y'), Blau-Gelb-Chrominanz (Cb), sowie Rot-Grün-Chrominanz (Cr).
+RGB kodiert Farbwerte mit 3 Komponenten die den Farbkanälen Rot~(R), Grün~(G), und Blau~(B) entsprechen.
+Im Gegensatz dazu stellt YCbCr die Farbinformation mit den 3 Komponenten Helligkeit~(Y), Blau-Gelb-Chrominanz~(Cb), sowie Rot-Grün-Chrominanz~(Cr).
 YCbCr findet Anwendung in JPEG/JFIF \cite{jfif} zur Farbkodierung.
 
-Liegen die Bilddaten in YCbCr vor, da z.B. mit Videos in MPEG gearbeitet wird, bietet es sich an die kodierte Helligkeit Y direkt zu verwenden, da diese sich an der menschlichen Helligkeitswahrnehmung orientiert.
+Liegen die Bilddaten in YCbCr vor, da z.B. mit Videos in MPEG gearbeitet wird, bietet es sich an die kodierte Helligkeit~$Y$ direkt zu verwenden, da diese sich an der menschlichen Helligkeitswahrnehmung orientiert.
 
 Liegt jedoch RGB vor, so muss die Helligkeit explizit ermittelt werden.
-Zum einen kann $Y$ nach der Formel folgender Formel \cite[2.5.1]{itu/rec/601} berechnet werden.
+Zum einen kann~$Y$ nach der Formel folgender Formel \cite[2.5.1]{itu/rec/601} berechnet werden.
 \begin{equation}
   Y = K_R R + (1 - K_R - K_B) G + K_B B
 \end{equation}
@@ -29,8 +29,8 @@ Diese Gewichtung erfolgt auch in allen Digitalkameras deren CCD-Sensor als \text
 \begin{equation}
   Y = \frac{1}{4} R + \frac{1}{2} G + \frac{1}{4}B
 \end{equation}
-Liegen die Werte R, G, und B als positive ganze Zahlen vor, kann die Formel durch 3 Additionen sowie 1 Rechtsshift im Binärsystem umgesetzt werden, da die Faktoren allesamt 2er-Potenzen sind.
-Siehe Anhang \ref{proof-division} für den Beweis.
+Liegen die Werte $R$, $G$ und $B$ als positive ganze Zahlen vor, kann die Formel durch 3 Additionen sowie 1 Rechtsshift im Binärsystem umgesetzt werden, da die Faktoren allesamt 2er-Potenzen sind.
+Siehe Anhang \ref{proof-division} für einen Beweis.
 \begin{equation}
   Y = (R + G + G + B) >\!\!> 2
 \end{equation}
