make dilation figure to avoid the widow in the following paragraph use non-breaking spaces where approriate

--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -4,7 +4,7 @@
 % aus Voss & Süße 1991
 Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu vergrößern.
 Bei die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller Pixel innerhalb einer gewissen Umgebung zugewiesen \cite[3.5]{steinmueller2008}.
-Zur Beschreibung der Umgebung dient ein Strukturelement $X$ fester Größe und Form (z.B. ein 3$\times$3 Quadrat), welches mit seinem Mittelpunkt $(0,0)$ über dem betrachteten Pixel platziert wird.
+Zur Beschreibung der Umgebung dient ein Strukturelement~$X$ fester Größe und Form (z.B. ein 3$\times$3-Quadrat), welches mit seinem Mittelpunkt~$(0,0)$ über dem betrachteten Pixel platziert wird.
 \begin{equation}
   (I\oplus X)(x,y)= \max \left\{ I(x+u,y+v) \;\middle|\; (u,v) \in X \right\} \quad X \subseteq \mathbb{Z}^2
 \end{equation}
@@ -14,14 +14,14 @@ Es können aber nur Bildstrukturen zusammengefasst werden sofern das Strukturele
 \begin{figure}[H]
   \label{fig:dilation}
   \centering
-  \begin{subfigure}{0.49\linewidth}
+  \begin{subfigure}[t]{.49\linewidth}
     \centering
-    \includegraphics[width=0.5\textwidth]{img/basics/dilation/before}
+    \includegraphics[width=0.4\textwidth]{img/basics/dilation/before}
     \caption{Ausgangsbild (100$\times$100 Pixel)}
   \end{subfigure}
-  \begin{subfigure}{0.49\linewidth}
+  \begin{subfigure}[t]{.49\linewidth}
     \centering
-    \includegraphics[width=0.5\textwidth]{img/basics/dilation/after}
+    \includegraphics[width=0.4\textwidth]{img/basics/dilation/after}
     \caption{Dilation mit einem 3$\times$3-Strukturelement}
   \end{subfigure}
   \caption{Beispiel einer Dilation eines Grauwertbildes}
