add one more sentence to the introduction in basics

--- a/doc/tex/basics.tex
+++ b/doc/tex/basics.tex
@@ -1,6 +1,7 @@
 \chapter{Grundlagen}
 \writtenby{\dcauthornameewie}%
-Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden, die die Grundlage für die entwickelten und implementierten Verfahren bilden.
+Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden, welche die Grundlage für die entwickelten und implementierten Verfahren bilden.
+Für einige Operationen sind diverse Varianten aufgelistet, die bei der Entwicklung betrachtet wurden, um die möglichst beste Variante auszuwählen.
 
 \input{tex/basics/grayscale}
 \input{tex/basics/dilation}
@@ -8,5 +9,5 @@ Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden,
 \input{tex/basics/segmentation}
 \input{tex/basics/connected-components}
 \input{tex/basics/convex-hull}
-
 \input{tex/basics/filter}
+
