allow display breaks

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -66,6 +66,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 
+\allowdisplaybreaks
+
 \usepackage{color}
 \definecolor{string}{rgb}{0.16,0,1}
 \definecolor{identifier}{rgb}{0.25,0.5,0.5}
