add sections for classes Job, Extraction, Barcode, Source, Region and Extractor

--- a/doc/tex/classes.tex
+++ b/doc/tex/classes.tex
@@ -6,6 +6,14 @@ Dabei wird nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten
 
 Am Ende des Kapitels werden dann die genutzten/benötigten Bibliotheken beschrieben.
 
+\input{tex/classes/job}
+\input{tex/classes/extraction}
+\input{tex/classes/region}
+\input{tex/classes/barcode}
+\input{tex/classes/source}
+\input{tex/classes/extractor}
+
 \input{tex/classes/imageprocessing}
 \input{tex/classes/improveimage}
 \input{tex/classes/usedlibraries}
+
