move hyphenations to a separate file

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -135,12 +135,7 @@
   \end{figure}%
 }
 
-\hyphenation{
-  Hell-ig-keits-ver-teil-ung
-  Scan-line-ver-fahr-ens
-  Ä-qui-va-lenz-en
-  zu-sätz-lich-e
-}
+\input{hyphenation}
 
 \begin{document}
 
